feat: add themaleaf tags in home.html and result.html

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -198,7 +198,7 @@
         <script type="text/javascript">
             // For opening the note modal
             function showNoteModal(noteId, noteTitle, noteDescription) {
-                $('#note-id').val(noteId ? noteId : 0);
+                $('#note-id').val(noteId ? noteId : '');
                 $('#note-title').val(noteTitle ? noteTitle : '');
                 $('#note-description').val(noteDescription ? noteDescription : '');
                 $('#noteModal').modal('show');
