feat: add check for duplicated names of file during upload

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -39,6 +39,9 @@
         </nav>
         <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="nav-files" role="tabpanel" aria-labelledby="nav-files-tab">
+                <div id="file-success-msg" th:if="${fileUploadSuccess}" th:text="${fileUploadSuccess}" class="alert alert-success" role="alert"/>
+                <div id="file-delete-msg" th:if="${fileDeleteSuccess}" th:text="${fileDeleteSuccess}" class="alert alert-success" role="alert"/>
+                <div id="file-error-msg" th:if="${fileError}" th:text="${fileError}" class="alert alert-danger" role="alert"/>
                 <form th:action="@{/file-upload}" enctype="multipart/form-data" method="POST">
                     <div class="container">
                         <div class="row" style="margin: 1em;">
